--- a/Inedo.DbUpdater/Inedo.DbUpdater.csproj
+++ b/Inedo.DbUpdater/Inedo.DbUpdater.csproj
@@ -16,6 +16,8 @@
 		<FileVersion>1.0.0.0</FileVersion>
 		<Version>0.0.0</Version>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<SignAssembly>true</SignAssembly>
+		<AssemblyOriginatorKeyFile>Inedo.DbUpdater.snk</AssemblyOriginatorKeyFile>
 	</PropertyGroup>
 	<ItemGroup Condition="$(TargetFramework)=='net452'">
 		<Reference Include="System.IO.Compression" />
