--- a/Inedo.DbUpdater/Inedo.DbUpdater.csproj
+++ b/Inedo.DbUpdater/Inedo.DbUpdater.csproj
@@ -18,7 +18,11 @@
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<SignAssembly>true</SignAssembly>
 		<AssemblyOriginatorKeyFile>Inedo.DbUpdater.snk</AssemblyOriginatorKeyFile>
+    <Nullable>enable</Nullable>
 	</PropertyGroup>
+	<ItemGroup>
+	  <EmbeddedResource Include="SqlServer\Scripts\*.sql" />
+	</ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
   </ItemGroup>
